<resources>
    <string name="CronetProviderClassName">com.google.android.gms.net.PlayServicesCronetProvider</string>
    <string name="_1_s_app">%1$s App</string>
    <string name="_1_s_days_until_expiration">%1$s until expiration</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="active">Active:</string>
    <string name="add">Added</string>
    <string name="add_collection_tip">Succeeded！Check it in \"Me\"</string>
    <string name="add_library_tip">Succeeded！Check it in \"Me\"</string>
    <string name="add_more">+ Add More</string>
    <string name="add_my_like">Succeeded！Check it in \"Me\"</string>
    <string name="adding_new_collection">We often recommend a variety of different types of themes, hope you can find the theme you like in %s ！</string>
    <string name="adding_new_moview">We’re always adding new movies and TV show to %s. Keep track of everything you want to watch by adding them to your list!</string>
    <string name="ads_folder">Ads folder</string>
    <string name="adults_only">Adults Only</string>
    <string name="advanced_viewing">Advanced viewing</string>
    <string name="after_ad_change_video_quality">After Ad,Change video quality</string>
    <string name="after_ad_ended_unlock_this_episode">After Ad ended unlock this episode</string>
    <string name="after_ad_free_download">After Ad,Free download</string>
    <string name="after_ad_you_can_cast_screen">After Ad,You can cast screen</string>
    <string name="after_ad_you_can_change_video_live">"You can't watch live streaming if you close advertisements"</string>
    <string name="after_ad_you_can_change_video_quality">After Ad,You can change video quality</string>
    <string name="after_ad_you_can_download_video">After Ad,you can download video</string>
    <string name="after_expiration_price">After Expiration Price</string>
    <string name="after_premium_subscribe_you_can_watch_these_video">After premium subscribe you can watch these videos</string>
    <string name="after_the_expiration_of_the_premium_return_to_original">After the Expiration of the Premium return to original</string>
    <string name="age">Age</string>
    <string name="age_error">Age is invalid</string>
    <string name="ai_search">AI Search</string>
    <string name="ai_search_hint">Describe about the video</string>
    <string name="aliplayer_wifi_tip">your phone is not in WLAN, pay attention to data usage.</string>
    <string name="alivc_common_cancel">Cancel</string>
    <string name="alivc_common_confirm">Confirm</string>
    <string name="alivc_common_creating_video_remind">Creating video，Please wait</string>
    <string name="alivc_common_device_memory_not_enough">Insufficient memory. Please clear memory cache</string>
    <string name="alivc_common_download">Download</string>
    <string name="alivc_common_loading">Loading</string>
    <string name="alivc_common_loading_end">Loading end</string>
    <string name="alivc_common_no_camera_permission">Camera usage is not permitted, please open first</string>
    <string name="alivc_common_no_free_memory">disk space not enough</string>
    <string name="alivc_common_no_permission">no permission</string>
    <string name="alivc_common_no_read_external_storage_permission">External storage is not permitted to read, please open first</string>
    <string name="alivc_common_no_read_phone_state_permission">Phone state is not permitted to read, please opend first</string>
    <string name="alivc_common_no_record_audio_permission">Audio is not permitted to record, please open first</string>
    <string name="alivc_common_no_record_bluetooth_permission">Bluetooth is not permitted to record, please open first</string>
    <string name="alivc_common_no_write_external_storage_permission">External storage is not permitted to write, please open first</string>
    <string name="alivc_common_note">Note</string>
    <string name="alivc_common_operate_fail">Fail</string>
    <string name="alivc_common_operate_success">Success</string>
    <string name="aliyun_common_cancel">Cancel</string>
    <string name="aliyun_common_confirm">Ok</string>
    <string name="aliyun_common_update_app">A new version is available. Upgrade to the new version?</string>
    <string name="aliyun_common_updating">Updating...</string>
    <string name="all_ages">All Ages</string>
    <string name="all_content">All content</string>
    <string name="allow">Allow</string>
    <string name="allow_notification_access">Allow notification access</string>
    <string name="allow_push_notification">Allow Push Notifications</string>
    <string name="android.credentials.TYPE_PASSWORD_CREDENTIAL">Password</string>
    <string name="androidx.credentials.TYPE_PUBLIC_KEY_CREDENTIAL">Passkey</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="anime_ranking">Anime Ranking</string>
    <string name="app_exti">Confirm to exit %s</string>
    <string name="app_force_update_tip1">You are using MOD APK</string>
    <string name="app_force_update_tip2">MOD APK of APP may contain viruses or steal your data. Please delete current app immediately and copy the following link to the browser to download the official APK</string>
    <string name="app_name">AaLha</string>
    <string name="app_update_background_downloading">正在后台下载新版本…</string>
    <string name="app_update_click_hint">点击进行安装</string>
    <string name="app_update_close">关闭</string>
    <string name="app_update_continue_downloading">Download error</string>
    <string name="app_update_dialog_new">发现新版本%s可以下载啦！</string>
    <string name="app_update_dialog_new_size">新版本大小：%s</string>
    <string name="app_update_download_completed">下载完成</string>
    <string name="app_update_download_error">下载出错</string>
    <string name="app_update_latest_version">当前已是最新版本!</string>
    <string name="app_update_start_download">开始下载</string>
    <string name="app_update_start_download_hint">可稍后查看下载进度</string>
    <string name="app_update_start_downloading">正在下载新版本</string>
    <string name="app_update_update">升级</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="apply_title_tip">"You can apply to us for Movies / Web Series / Shows can't find in %s"</string>
    <string name="approx_price">Approx.%s per day</string>
    <string name="ask_friends_to_help_unlock">Ask friends to help unlock</string>
    <string name="attention">Attention</string>
    <string name="authorize_on_original_device">Authorize on Original Device</string>
    <string name="authorize_other_device_step_tip1">Please ensure the original device has the %1$s app open and send a verification request to the original device.</string>
    <string name="authorize_other_device_step_tip2">"The original device will receive a pop-up. Click 'Allow' to complete authorization."</string>
    <string name="auto_translation">Auto Translation</string>
    <string name="average_score">Average Score</string>
    <string name="avg_price_month">%s/month</string>
    <string name="back">Back</string>
    <string name="bangladesh_money_unit">৳ %1$d</string>
    <string name="bangladesh_money_unit_s">৳ %1$s</string>
    <string name="base_cancel">Cancel</string>
    <string name="base_confirm">Sure</string>
    <string name="base_congrats">Congrats!</string>
    <string name="base_i_know">Know</string>
    <string name="base_join">Join</string>
    <string name="base_loading">loading...</string>
    <string name="basketball">Basketball</string>
    <string name="batsman">BATSMAN</string>
    <string name="contact_us">Contact Us</string>
    <string name="cricket_league_title_l">L</string>
    <string name="cricket_league_title_nrr">NRR</string>
    <string name="cricket_league_title_p">P</string>
    <string name="cricket_league_title_pts">PTS</string>
    <string name="cricket_league_title_t">T</string>
    <string name="cricket_league_title_team">TEAM</string>
    <string name="cricket_league_title_w">W</string>
    <string name="device_title">Device Authorization Center</string>
    <string name="dialog_cancel_txt">Cancel</string>
    <string name="dialog_confirm_txt">Continue</string>
    <string name="download_app_for_tv">Download App for TV</string>
    <string name="log_off_next_btn">Next</string>
    <string name="log_off_tip">Deleting your account is a permanent operation</string>
    <string name="log_off_tip1">"1.Deleting your account from %1$s will remove all data (Including but not limited to such as: Premium, Gold coins, Cash balance, My Watchlist, My Thematic Collection, etc.) related to this account and can't be undone. "</string>
    <string name="log_off_tip2">2.After deleting your account, you will get a new account even if you log in with the same number or email address again.</string>
    <string name="log_off_tip3">3.Deleting your account and registering again will not get any new account rewards.</string>
    <string name="log_off_tip4">4.Please double check that you really want to delete this account.</string>
    <string name="mine_download">My Download</string>
    <string name="mine_un_login">Sign in/Sign up</string>
    <string name="parental_controls">Parental Controls</string>
    <string name="player_view_state_no_wifi_consume_data">Continuing to play will consume data</string>
    <string name="player_view_state_no_wifi_reminded">"I don't need to be reminded"</string>
    <string name="preferred_playback_language">Preferred Playback Language</string>
    <string name="setting_agreement">Term of Use</string>
    <string name="setting_clear_trash">Clear Cache</string>
    <string name="setting_help_center">Help Center</string>
    <string name="setting_language">App Language</string>
    <string name="setting_log_off">Delete Account</string>
    <string name="setting_logout">Log out</string>
    <string name="setting_privacy_policy">Privacy Policy</string>
    <string name="setting_share_app">Share App</string>
    <string name="setting_title_account">Account</string>
    <string name="setting_title_app">App</string>
    <string name="setting_title_support">Support &amp; About</string>
    <string name="setting_update_version">Version Update</string>
    <string name="user_id_1_s">User ID:%1$s</string>
    <string name="user_name_1_s">User Name:%1$s</string>
</resources>