<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="wrap_content">
        <LinearLayout android:id="@id/ll_team" android:layout_width="0.0dp" android:layout_height="wrap_content" app:layout_constraintEnd_toStartOf="@id/tv_p" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent">
            <TextView android:textSize="12.0sp" android:textColor="@color/color_7B7C89" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginLeft="20.0dp" android:text="@string/cricket_league_title_team" />
        </LinearLayout>
        <TextView android:textSize="12.0sp" android:textColor="@color/color_7B7C89" android:gravity="center" android:id="@id/tv_p" android:layout_width="30.0dp" android:layout_height="wrap_content" android:text="@string/cricket_league_title_p" app:layout_constraintEnd_toStartOf="@id/tv_w" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/ll_team" app:layout_constraintTop_toTopOf="@id/ll_team" />
        <TextView android:textSize="12.0sp" android:textColor="@color/color_7B7C89" android:gravity="center" android:id="@id/tv_w" android:layout_width="30.0dp" android:layout_height="wrap_content" android:text="@string/cricket_league_title_w" app:layout_constraintEnd_toStartOf="@id/tv_t" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/tv_p" app:layout_constraintTop_toTopOf="@id/ll_team" />
        <TextView android:textSize="12.0sp" android:textColor="@color/color_7B7C89" android:gravity="center" android:id="@id/tv_t" android:layout_width="30.0dp" android:layout_height="wrap_content" android:text="@string/cricket_league_title_l" app:layout_constraintEnd_toStartOf="@id/tv_l" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/tv_w" app:layout_constraintTop_toTopOf="@id/ll_team" />
        <TextView android:textSize="12.0sp" android:textColor="@color/color_7B7C89" android:gravity="center" android:id="@id/tv_l" android:layout_width="30.0dp" android:layout_height="wrap_content" android:text="@string/cricket_league_title_t" app:layout_constraintEnd_toStartOf="@id/tv_nrr" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/tv_t" app:layout_constraintTop_toTopOf="@id/ll_team" />
        <TextView android:textSize="12.0sp" android:textColor="@color/color_7B7C89" android:gravity="center" android:id="@id/tv_nrr" android:layout_width="50.0dp" android:layout_height="wrap_content" android:text="@string/cricket_league_title_nrr" app:layout_constraintEnd_toStartOf="@id/tv_pts" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/tv_l" app:layout_constraintTop_toTopOf="@id/ll_team" />
        <TextView android:textSize="12.0sp" android:textColor="@color/color_7B7C89" android:gravity="center" android:id="@id/tv_pts" android:layout_width="30.0dp" android:layout_height="wrap_content" android:text="@string/cricket_league_title_pts" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/tv_nrr" app:layout_constraintTop_toTopOf="@id/ll_team" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <androidx.recyclerview.widget.RecyclerView android:id="@id/rlv_team" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
</LinearLayout>
