<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <include android:id="@id/title" layout="@layout/layout_title" />
    <androidx.constraintlayout.widget.ConstraintLayout android:id="@id/ct_user_view" android:layout_width="match_parent" android:layout_height="wrap_content">
        <ImageView android:id="@id/img_head" android:layout_width="40.0dp" android:layout_height="40.0dp" android:layout_marginTop="10.0dp" android:layout_marginBottom="10.0dp" android:layout_marginStart="15.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="20.0sp" android:textColor="@color/white" android:gravity="center" android:id="@id/tv_default_head" android:background="@drawable/shape_cricle_bg" android:layout_width="40.0dp" android:layout_height="40.0dp" android:layout_marginTop="10.0dp" android:layout_marginStart="15.0dp" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="16.0sp" android:textColor="@color/white" android:id="@id/tv_account_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dp" android:layout_marginStart="11.0dp" app:layout_constraintStart_toEndOf="@id/img_head" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:textSize="9.0sp" android:textColor="@color/transparent_70" android:id="@id/tv_login_type" android:paddingLeft="15.0dp" android:paddingRight="15.0dp" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="3.0dp" app:layout_constraintStart_toStartOf="@id/tv_account_name" app:layout_constraintTop_toBottomOf="@id/tv_account_name" />
        <LinearLayout android:orientation="vertical" android:id="@id/ll_user_info" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dp" android:layout_marginEnd="50.0dp" app:layout_constrainedWidth="true" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.0" app:layout_constraintStart_toStartOf="@id/tv_login_type" app:layout_constraintTop_toBottomOf="@id/tv_login_type">
            <TextView android:textSize="12.0sp" android:textColor="@color/color_92929B" android:id="@id/user_name" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_name_1_s" />
            <TextView android:textSize="12.0sp" android:textColor="@color/color_92929B" android:id="@id/user_id" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/user_id_1_s" />
        </LinearLayout>
        <ImageView android:id="@id/iv_copy" android:visibility="gone" android:layout_width="20.0dp" android:layout_height="20.0dp" android:src="@drawable/ic_copy_image" android:layout_marginStart="20.0dp" app:layout_constraintBottom_toBottomOf="@id/ll_user_info" app:layout_constraintStart_toEndOf="@id/ll_user_info" app:layout_constraintTop_toTopOf="@id/ll_user_info" />
    </androidx.constraintlayout.widget.ConstraintLayout>
    <LinearLayout android:orientation="horizontal" android:id="@id/ll_un_login_user" android:visibility="gone" android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_marginTop="15.0dp">
        <ImageView android:gravity="center" android:background="@mipmap/icon_user_head" android:layout_width="40.0dp" android:layout_height="40.0dp" android:layout_marginStart="15.0dp" />
        <androidx.constraintlayout.widget.ConstraintLayout android:layout_gravity="center_vertical" android:orientation="vertical" android:id="@id/ct_un_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginStart="10.0dp">
            <TextView android:textSize="16.0sp" android:textColor="@color/white" android:layout_gravity="center_vertical" android:id="@id/tv_un_title" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/mine_un_login" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
            <TextView android:textSize="12.0sp" android:textColor="@color/color_92929B" android:ellipsize="middle" android:id="@id/tv_guest" android:visibility="gone" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="5.0dp" android:layout_marginBottom="5.0dp" android:lines="1" android:maxEms="10" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/tv_un_title" />
            <ImageView android:id="@id/iv_copy1" android:visibility="gone" android:layout_width="20.0dp" android:layout_height="20.0dp" android:src="@drawable/ic_copy_image" android:layout_marginStart="2.0dp" app:layout_constraintBottom_toBottomOf="@id/tv_guest" app:layout_constraintStart_toEndOf="@id/tv_guest" app:layout_constraintTop_toTopOf="@id/tv_guest" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>
    <androidx.core.widget.NestedScrollView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_weight="1.0">
        <LinearLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="match_parent">
            <TextView android:textSize="13.0sp" android:textColor="@color/color_92929b" android:gravity="center" android:background="@drawable/shape_setting_category_tab" android:layout_width="wrap_content" android:layout_height="24.0dp" android:layout_marginTop="21.0dp" android:layout_marginBottom="7.0dp" android:text="@string/setting_title_account" android:paddingStart="12.0dp" android:paddingEnd="12.0dp" android:layout_marginStart="15.0dp" />
            <androidx.constraintlayout.widget.ConstraintLayout android:layout_width="match_parent" android:layout_height="53.0dp">
                <TextView android:textSize="15.0sp" android:textColor="@color/setting_item_text" android:id="@id/textView4" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/parental_controls" android:layout_marginStart="24.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent" />
                <Switch android:id="@id/switch_parental_controls" android:layout_width="42.0dp" android:layout_height="22.0dp" android:thumb="@drawable/select_switch_thumb_bg" android:track="@drawable/select_switch_track_bg" android:layout_marginEnd="13.0dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>
            <com.gxgx.daqiandy.widgets.SettingItemView android:id="@id/sit_device" android:background="@color/setting_item_bg" android:layout_width="match_parent" android:layout_height="53.0dp" android:layout_marginTop="1.0dp" android:layout_marginStart="15.0dp" android:layout_marginEnd="2.0dp" app:arrow_visible="true" app:img_left="@drawable/ic_setting_update" app:left_text="@string/device_title" app:right_text="" />
            <TextView android:textSize="13.0sp" android:textColor="@color/color_92929b" android:gravity="center" android:background="@drawable/shape_setting_category_tab" android:layout_width="wrap_content" android:layout_height="24.0dp" android:layout_marginTop="21.0dp" android:layout_marginBottom="7.0dp" android:text="@string/setting_title_app" android:paddingStart="12.0dp" android:paddingEnd="12.0dp" android:layout_marginStart="15.0dp" />
            <com.gxgx.daqiandy.widgets.SettingItemView android:id="@id/sit_download" android:background="@color/setting_item_bg" android:visibility="gone" android:layout_width="match_parent" android:layout_height="53.0dp" android:layout_marginLeft="15.0dp" android:layout_marginTop="1.0dp" android:layout_marginRight="2.0dp" app:arrow_visible="true" app:img_left="@drawable/ic_setting_update" app:left_text="@string/mine_download" app:right_text="" />
            <com.gxgx.daqiandy.widgets.SettingItemView android:id="@id/sit_share" android:background="@color/setting_item_bg" android:layout_width="match_parent" android:layout_height="53.0dp" android:layout_marginLeft="15.0dp" android:layout_marginTop="1.0dp" android:layout_marginRight="2.0dp" app:arrow_visible="true" app:img_left="@drawable/ic_setting_update" app:left_text="@string/setting_share_app" app:right_text="" />
            <com.gxgx.daqiandy.widgets.SettingItemView android:id="@id/sit_language" android:background="@color/setting_item_bg" android:layout_width="match_parent" android:layout_height="53.0dp" android:layout_marginLeft="15.0dp" android:layout_marginTop="1.0dp" android:layout_marginRight="2.0dp" app:arrow_visible="true" app:img_left="@drawable/ic_setting_update" app:left_text="@string/setting_language" app:right_text="" />
            <com.gxgx.daqiandy.widgets.SettingItemView android:id="@id/sit_preference_language" android:background="@color/setting_item_bg" android:visibility="gone" android:layout_width="match_parent" android:layout_height="53.0dp" android:layout_marginLeft="15.0dp" android:layout_marginTop="1.0dp" android:layout_marginRight="2.0dp" app:arrow_visible="true" app:img_left="@drawable/ic_setting_update" app:left_text="@string/preferred_playback_language" app:right_text="" />
            <com.gxgx.daqiandy.widgets.SettingItemView android:id="@id/download_app_for_tv" android:background="@color/setting_item_bg" android:visibility="gone" android:layout_width="match_parent" android:layout_height="53.0dp" android:layout_marginLeft="15.0dp" android:layout_marginTop="1.0dp" android:layout_marginRight="2.0dp" app:arrow_visible="true" app:img_left="@drawable/ic_setting_update" app:left_text="@string/download_app_for_tv" app:right_text="" />
            <com.gxgx.daqiandy.widgets.SettingItemView android:id="@id/sit_trash" android:background="@color/setting_item_bg" android:layout_width="match_parent" android:layout_height="53.0dp" android:layout_marginLeft="15.0dp" android:layout_marginTop="1.0dp" android:layout_marginRight="2.0dp" app:arrow_visible="false" app:img_left="@drawable/ic_setting_update" app:left_text="@string/setting_clear_trash" app:right_text="" />
            <com.gxgx.daqiandy.widgets.SettingItemView android:id="@id/ll_upload_log_file" android:background="@color/setting_item_bg" android:visibility="gone" android:layout_width="match_parent" android:layout_height="53.0dp" android:layout_marginLeft="15.0dp" android:layout_marginTop="1.0dp" android:layout_marginRight="2.0dp" app:arrow_visible="true" app:img_left="@drawable/ic_setting_update" app:left_text="UploadLogFile" app:right_text="" />
            <com.gxgx.daqiandy.widgets.SettingItemView android:id="@id/ll_change_base_url" android:background="@color/setting_item_bg" android:visibility="gone" android:layout_width="match_parent" android:layout_height="53.0dp" android:layout_marginLeft="15.0dp" android:layout_marginTop="1.0dp" android:layout_marginRight="2.0dp" app:arrow_visible="true" app:img_left="@drawable/ic_setting_update" app:left_text="Switch domains" app:right_text="" />
            <com.gxgx.daqiandy.widgets.SettingItemView android:id="@id/sit_update" android:background="@color/setting_item_bg" android:layout_width="match_parent" android:layout_height="53.0dp" android:layout_marginLeft="15.0dp" android:layout_marginTop="1.0dp" android:layout_marginRight="2.0dp" app:arrow_visible="false" app:img_left="@drawable/ic_setting_update" app:left_text="@string/setting_update_version" app:right_text="v1.0.2" />
            <TextView android:textSize="13.0sp" android:textColor="@color/color_92929b" android:gravity="center" android:background="@drawable/shape_setting_category_tab" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="21.0dp" android:layout_marginBottom="7.0dp" android:text="@string/setting_title_support" android:paddingStart="12.0dp" android:paddingEnd="12.0dp" android:layout_marginStart="15.0dp" />
            <com.gxgx.daqiandy.widgets.SettingItemView android:id="@id/contact_us" android:background="@color/setting_item_bg" android:layout_width="match_parent" android:layout_height="53.0dp" android:layout_marginLeft="15.0dp" android:layout_marginTop="1.0dp" android:layout_marginRight="2.0dp" app:arrow_visible="true" app:left_text="@string/contact_us" app:right_text="" />
            <com.gxgx.daqiandy.widgets.SettingItemView android:id="@id/sit_question" android:background="@color/setting_item_bg" android:layout_width="match_parent" android:layout_height="53.0dp" android:layout_marginLeft="15.0dp" android:layout_marginTop="1.0dp" android:layout_marginRight="2.0dp" app:arrow_visible="true" app:img_left="@drawable/ic_setting_update" app:left_text="@string/setting_help_center" app:right_text="" />
            <com.gxgx.daqiandy.widgets.SettingItemView android:id="@id/sit_agreement" android:background="@color/setting_item_bg" android:layout_width="match_parent" android:layout_height="53.0dp" android:layout_marginLeft="15.0dp" android:layout_marginTop="1.0dp" android:layout_marginRight="2.0dp" app:arrow_visible="true" app:img_left="@drawable/ic_setting_update" app:left_text="@string/setting_agreement" app:right_text="" />
            <com.gxgx.daqiandy.widgets.SettingItemView android:id="@id/sit_privacy_policy" android:background="@color/setting_item_bg" android:layout_width="match_parent" android:layout_height="53.0dp" android:layout_marginLeft="15.0dp" android:layout_marginTop="1.0dp" android:layout_marginRight="2.0dp" app:arrow_visible="true" app:img_left="@drawable/ic_setting_update" app:left_text="@string/setting_privacy_policy" app:right_text="" />
            <com.gxgx.daqiandy.widgets.SettingItemView android:id="@id/sit_log_off" android:background="@color/setting_item_bg" android:layout_width="match_parent" android:layout_height="53.0dp" android:layout_marginLeft="15.0dp" android:layout_marginTop="1.0dp" android:layout_marginRight="2.0dp" app:arrow_visible="true" app:img_left="@drawable/ic_setting_update" app:left_text="@string/setting_log_off" app:right_text="" />
            <TextView android:textSize="15.0sp" android:textColor="@color/setting_btn_text" android:gravity="center" android:id="@id/tv_logout" android:background="@drawable/shape_setting_btn_bg" android:layout_width="match_parent" android:layout_height="40.0dp" android:layout_marginLeft="12.0dp" android:layout_marginTop="24.0dp" android:layout_marginRight="12.0dp" android:layout_marginBottom="24.0dp" android:text="@string/setting_logout" android:fontFamily="sans-serif-medium" />
        </LinearLayout>
    </androidx.core.widget.NestedScrollView>
</LinearLayout>
